--- a/style/customers.css
+++ b/style/customers.css
@@ -1,5 +1,5 @@
 .customers{
-	width: 1920px;
+	width: 100%;
 	height: 160px;
 	border-top: 1px solid rgba(0,0,0, .2);
 	border-bottom: 1px solid rgba(0,0,0, .2);
@@ -20,6 +20,10 @@
 .customers p{
 	font-size: 14px;
 	color: rgba(0,0,0, .5);
+}
+
+.customes-icons{
+	display: flex;
 }
 
 .customers-icons img{
