--- a/style/footer.css
+++ b/style/footer.css
@@ -1,10 +1,11 @@
 .footer{
+	width: 100%;
 	height: 400px;
 	background-color: #fafafa;
 	box-sizing: border-box;
 	padding-top: 80px;
-	padding-bottom: 90px;
 	display: flex;
+	justify-content: space-between;
 }
 
 .privacy-terms{
@@ -38,14 +39,6 @@
 	padding: 0;
 }
 
-.category-column{
-	margin-left: 150px;
-}
-
-.category-column:first-child{
-	margin-left: 200px;
-}
-
 .category-column p{
 	text-transform: uppercase;
 	font-weight: 600;
@@ -57,6 +50,7 @@
 	margin-left: 0;
 	margin-bottom: 20px;
 	font-size: 15px;
+	cursor: pointer;
 }
 
 .categories-item:hover{
