--- a/style/header.css
+++ b/style/header.css
@@ -1,5 +1,5 @@
 .header{
-	width: 1920px;
+	width: 100%;
 	height: 130px;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .container{
-	padding: 0 380px;
+	padding: 0 10%;
 }
 
 .contacts--social{
