--- a/style/services.css
+++ b/style/services.css
@@ -1,13 +1,16 @@
  .services{
- 	width: 1920px;
+ 	width: 100%;
  	height: 630px;
  	background-image: url(../images/notebook.png);
  	background-repeat: no-repeat;
  	background-position-x: -300px;
+ 	position: relative;
  }
 
  .services-block{
- 	margin-left: 860px;
+ 	position: absolute;
+ 	right: 20%;
+ 	width: 660px;
  }
 
  .title-box{
@@ -31,7 +34,9 @@
 
  .services-items{
  	display: flex;
+ 	justify-content: space-between;
  	margin-bottom: 70px;
+ 	width: 400px;
  }
 
  .services-icon{
@@ -41,7 +46,6 @@
  .services-item{
  	display: flex;
  	width: 340px;
- 	margin-right: 70px;
  }
 
 .item-text-block{
