--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,9 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-image: url(../images/1bg.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .main h1{
