--- a/style/services.css
+++ b/style/services.css
@@ -9,8 +9,8 @@
 
  .services-block{
  	position: absolute;
- 	right: 20%;
- 	width: 690px;
+ 	right: 10%;
+ 	width: 700px;
  }
 
  .title-box{
@@ -69,7 +69,7 @@
 	width: 40px;
 }
 
-@media(max-width: 1812px){
+/*@media(max-width: 1812px){
 	.services-block{
 		right: 10%;
 	}
@@ -78,6 +78,19 @@
 @media(max-width: 1566px){
 	.services-block{
 		right: 0;
+	}
+}*/
+
+
+@media(max-width: 1631px){
+	.services-block{
+		right: 5%;
+	}
+}
+
+@media(max-width: 1517px){
+	.services-block{
+		right: 0%;
 	}
 }
 
@@ -90,5 +103,15 @@
 @media(max-width: 1284px){
 	.services{
 		background-size:70%;
+	}
+}
+
+@media(max-width: 1225px){
+	.services{
+		background-image: none;
+	}
+	.services-block{
+		position: relative;
+		margin: 0 auto;
 	}
 }
